--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -548,7 +548,7 @@ AIC & 714.980 & 704.356 \\
 \end{table*}
 
 
-To explore the underlying reason for this discrepancy and test the robustness of our results, we find it instructive to break our analysis into specific tournament years for the two (Lancashire and West Midlands; see Table \ref{kirbyrep2}). To be consistent with previous results, we present the regressions for both types of domestic abuse (alcohol and non-alcohol related), however, unfortunately we cannot do the same for the Lancashire dataset, as we have no information on alcohol-involvement. Only year 2010 overlaps in the two datasets, which allows us to at least partly evaluate the robustness of the England win effect.
+To explore the underlying reason for this discrepancy and test the robustness of our results, we find it instructive to break our analysis into specific tournament years (Lancashire and West Midlands; see Table \ref{kirbyrep2}). To be consistent with previous results, we present the regressions for both types of domestic abuse (alcohol and non-alcohol related), however, unfortunately we cannot do the same for the Lancashire dataset, as we have no information on alcohol-involvement. Only year 2010 overlaps in the two datasets, which allows us to at least partly evaluate the robustness of the England win effect.
 
  An interesting common pattern in both datasets is the large effect of England's victory over Slovenia in the group stage of the 2010 World Cup, which, after much anticipation, secured their progression to the next stage of the tournament. Equally, the subsequent loss against Germany in the knockout stage resulted in a substantial increase in the number of reported domestic abuse incidents, which is the strongest loss effect in our dataset. In addition, the size of the win and loss coefficients are remarkably similar, giving us confidence that these effects are likely to generalise to other areas within England. These patterns are also in line with findings from an earlier examination by \cite{Brimicombe2012}, who found an increase in the number of domestic abuse cases reported to the police across England on both victory and loss days during the 2010 World Cup.  Most importantly, if the same mechanism lies behind our results, then it suggests that the increase observed in other datasets are also likely to stem from alcohol-related cases. 
    
