--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -101,10 +101,10 @@ This research was funded in part by Economic and Social Research Council grants 
 %\textbf{Background.} Domestic abuse is increasingly recognised as a serious public health concern worldwide. In the context of England, previous research has suggested that the number of domestic abuse cases reported to the police increase on days when the national football (soccer) team participates in international football tournaments such as the World Cup. Alcohol is hypothesized to be an important factor in this relationship, but its exact role has not been explored yet. We sought to fill this gap by investigating the extent to which alcohol contributes to the link between football and domestic abuse.
 
 
-%\textbf{Methods.} Using a detailed crime dataset recorded between 2010 and 2018 by the third largest police force in England, we conducted a series of negative binomial regressions to investigate the relationship between England's participation in national football tournaments and the daily number of recorded alcohol-related domestic abuse incidents.
+%\textbf{Methods.} Using a detailed crime dataset recorded between 2010 and 2018 by the second largest police force in England, we conducted a series of negative binomial regressions to investigate the relationship between England's participation in national football tournaments and the daily number of recorded alcohol-related domestic abuse incidents.
 
 
-%\textbf{Findings.} Our results show that the number of reported alcohol-related domestic abuse cases increases by 61\%, 95\% CI [32\% -- 96\%] following an England victory, while there is no comparable increase in the number of non-alcohol related domestic abuse cases. This is a large effect, translating into a 0.43 increase in the daily rate of alcohol-related cases per 100,000 individuals, against a base rate 0.71 cases per 100,000. This effect is specific to male-to-female cases, survives various robustness checks, and its time course is strongly consistent with a causal link between England's victory and an increase in alcohol-related domestic abuse.
+%\textbf{Findings.} Our results show that the number of reported alcohol-related domestic abuse cases increases by 61\%, 95\% CI [32\% -- 96\%] following an England victory, while there is no comparable increase in the number of non-alcohol related domestic abuse cases. This is a large effect, translating into a 0.43 increase in the daily rate of alcohol-related cases per 100,000 individuals, against a base rate 0.71 cases per 100,000. This effect is specific to male-to-female cases, \TM{Delete if analysis not included} survives various robustness checks, and its time course is strongly consistent with a causal link between England's victory and an increase in alcohol-related domestic abuse.
 
 
 %\textbf{Interpretation.} Alcohol plays an instrumental role in the link between football and domestic abuse. Temporally targeted campaigns could be effective in raising awareness of the adverse effect of football-induced alcohol consumption on the prevalence of domestic abuse.
@@ -144,7 +144,7 @@ The link between sporting events and domestic abuse has been the focus of a numb
 %Two studies have investigated the effect of England's participation in the World Cup on the number of reported domestic abuse incidents. Using data on the number of reported domestic abuse cases in the month of the 2010 World Cup tournament, one study has found that the number of reported domestic abuse cases increased significantly when England lost or won (about 33-35\%), but did not change on days when they drew \cite{Brimicombe2012}. Another study has used daily count data from the 2002, 2006 and 2010 World Cups, and found a 38\% increase in the number of reported domestic violence cases when the England team lost, and a 26\% increase when they won or drew \cite{Kirby2014}. These figures were also quoted in a poster campaign launched before the 2018 World Cup, aiming to raise awareness of the link between football and domestic abuse \cite{NCDV}. While domestic abuse is predominantly understood as a pattern of ongoing behaviour involving a series of occurrences, rather than a one-off incident triggered by football \cite{Brooks-Hay2018}, these studies, and other qualitative investigations \cite{Swallow} nevertheless suggest that national football tournaments can create an environment for abusers that is conducive to domestic abuse.
 
 
-Why would national football tournaments, such as the World Cup or the European Championship precipitate domestic abuse? England's participation in these tournaments are times of heightened patriotic emotions and a strengthened sense of ``Englishness'', fuelled by media narratives that often use war references, and a ``us vs. them'' rhetoric to generate and represent an English national identity \cite{Vincent2014}. Previous qualitative research has suggested that televised contact sports can serve as vehicle for the male sports fan to redefine, and express his masculinity in a way that allows dominance, control, and can ultimately manifest in the perpetration of domestic abuse \cite{Sabo,Swallow}, given susceptibility to such behaviours. We speculate that this observation is especially pertinent in the context of England's participation in national football tournaments, owing to the popularity of the sport in the country, the associated media attention, and the resulting heightened sense of national consciousness. \AT{Not sure if it would be worth adding something on the link between nationalism and masculinity? It would be good to offer a story for potential pathways whilst avoiding having to say something strong which can be attacked}
+Why would national football tournaments, such as the World Cup or the European Championship precipitate domestic abuse? England's participation in these tournaments are times of heightened patriotic emotions and a strengthened sense of ``Englishness'', fuelled by media narratives that often use war references, and an ``us vs. them'' rhetoric to generate and represent an English national identity \cite{Vincent2014}. Previous qualitative research has suggested that televised contact sports can serve as vehicle for the male sports fan to redefine, and express his masculinity in a way that allows dominance, control, and can ultimately manifest in the perpetration of domestic abuse \cite{Sabo,Swallow}, given susceptibility to such behaviours. We speculate that this observation is especially pertinent in the context of England's participation in national football tournaments, owing to the popularity of the sport in the country, the associated media attention, and the resulting heightened sense of national consciousness. \AT{Not sure if it would be worth adding something on the link between nationalism and masculinity? It would be good to offer a story for potential pathways whilst avoiding having to say something strong which can be attacked} \TM{I lean towards no}
 
 
 Previous studies found a strong link between alcohol and domestic abuse, suggesting that alcohol can either be seen as a contributing cause, an aggravating factor, or a trigger of violent behaviour in domestic (and other) settings \cite{Leonard2017}. The ecological model of intimate partner violence (IPV; the most common form of domestic abuse) sees IPV as a product of societal, community, relationship, and individual influences. From a community perspective, \citeA{Graham2017} argue that social contexts where excessive drinking is encouraged (e.g., through the promotion of alcohol during sporting events) are often permissive of violent behaviour and sexism, which can increase the likelihood of alcohol-related domestic abuse. However, strong inhibitory factors (e.g., social norms, and more specifically the condemnation of peers) can offset the disinhibitory effect of alcohol consumption, and reduce the likelihood of subsequent perpetration.  
