--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -157,7 +157,7 @@ Previous studies found a strong link between alcohol and domestic abuse, suggest
 
 Despite the evident links between alcohol and domestic abuse, the role alcohol plays in the link between football and domestic abuse has not yet been explored in a large-scale quantitative study. Given the strong association between drinking culture and football in England \cite{Dixon2014}, a relationship continuously reinforced by the marketing practices of the alcohol industry \cite{Gornall2014}, we conjecture that alcohol acts as an aggravating factor in the link between football and domestic abuse in England. Exploring the role alcohol plays in this relationship will deepen our understanding of the pathway through which football increases propensity for violence in domestic settings.
 
-To test this hypothesis, we investigate whether the daily number of reported alcohol and non-alcohol related domestic abuse cases recorded by the third largest police force in England (West Midlands Police; WMP) between 2010 and 2019 increase on days when the England national team plays in a national football tournament (the FIFA World Cup and UEFA European Football Championship), and whether the effect, if any, depends on the result of the match.
+To test this hypothesis, we investigate whether the daily number of reported alcohol and non-alcohol related domestic abuse cases recorded by the second largest police force in England (West Midlands Police; WMP) between 2010 and 2019 increase on days when the England national team plays in a national football tournament (the FIFA World Cup and UEFA European Football Championship), and whether the effect, if any, depends on the result of the match.
 
 \citeA{Card2011} had to rely upon the stochastic nature of game outcomes (after controlling for bookmakers expectations) to make a causal inference between unexpected losses in college football and domestic abuse. 
 Here, we exploit the fact that national teams are randomly allocated to slots in the tournament structure.
